--- a/Source/Game.vcxproj.filters
+++ b/Source/Game.vcxproj.filters
@@ -2,7 +2,6 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="j1App.cpp" />
-    <ClCompile Include="Deps\pugixml-1.10\src\pugixml.cpp" />
     <ClCompile Include="j1Audio.cpp" />
     <ClCompile Include="j1Fonts.cpp" />
     <ClCompile Include="j1Gui.cpp" />
@@ -15,7 +14,6 @@
     <ClCompile Include="j1Timer.cpp" />
     <ClCompile Include="j1Window.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="p2Log.cpp" />
     <ClCompile Include="j1Transitions.cpp" />
     <ClCompile Include="Animation.cpp">
       <Filter>Animation</Filter>
@@ -35,6 +33,12 @@
     <ClCompile Include="j1SceneTitle.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
+    <ClCompile Include="Deps\pugixml-1.10\src\pugixml.cpp">
+      <Filter>Tools</Filter>
+    </ClCompile>
+    <ClCompile Include="p2Log.cpp">
+      <Filter>Tools</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1App.h" />
@@ -50,9 +54,6 @@
     <ClInclude Include="j1Textures.h" />
     <ClInclude Include="j1Timer.h" />
     <ClInclude Include="j1Window.h" />
-    <ClInclude Include="p2Defs.h" />
-    <ClInclude Include="p2Log.h" />
-    <ClInclude Include="p2Point.h" />
     <ClInclude Include="j1Transitions.h" />
     <ClInclude Include="Animation.h">
       <Filter>Animation</Filter>
@@ -72,6 +73,15 @@
     <ClInclude Include="j1SceneTitle.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="p2Point.h">
+      <Filter>Tools</Filter>
+    </ClInclude>
+    <ClInclude Include="p2Log.h">
+      <Filter>Tools</Filter>
+    </ClInclude>
+    <ClInclude Include="p2Defs.h">
+      <Filter>Tools</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Animation">
@@ -82,6 +92,9 @@
     </Filter>
     <Filter Include="Scenes">
       <UniqueIdentifier>{31cfa9db-d74e-4a76-b284-0491bedbe81e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Tools">
+      <UniqueIdentifier>{13dd870e-aad2-498f-832d-cc327d43fa66}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
