--- a/.github/workflows/Kujo-Studios CI.yml
+++ b/.github/workflows/Kujo-Studios CI.yml
@@ -17,29 +17,15 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: windows-latest
-    strategy:
-      fail-fast: false
-      max-parallel: 1
-      matrix:
-        compiler: [msvc16]
-        bits: [32]
-        include:
-          - compiler: msvc16
-            bits: 32
-            GENERATOR: "Visual Studio 16 2019"
-            ARCH: "-A Win32"
-      
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@master
-      
-    - name: Add msbuild to PATH
-      uses: microsoft/setup-msbuild@v1.0.0
-        with:
-          vs-version: [16.4,16.5]
-          
-      -run: |
-        msbuild
-          
+
+    - name: Setup MSBuild.exe
+      uses: warrenbuckley/Setup-MSBuild@v1
+
+    - name: MSBuild
+      working-directory: Source
+      run: msbuild Game.vcxproj
