--- a/Source/Game.vcxproj.filters
+++ b/Source/Game.vcxproj.filters
@@ -39,6 +39,7 @@
     <ClCompile Include="p2Log.cpp">
       <Filter>Tools</Filter>
     </ClCompile>
+    <ClCompile Include="j1Pathfinding.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1App.h" />
@@ -82,6 +83,7 @@
     <ClInclude Include="p2Defs.h">
       <Filter>Tools</Filter>
     </ClInclude>
+    <ClInclude Include="j1Pathfinding.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Animation">
