--- a/.github/workflows/Kujo-Studios CI.yml
+++ b/.github/workflows/Kujo-Studios CI.yml
@@ -24,7 +24,12 @@ jobs:
     - uses: actions/checkout@master
 
     - name: Setup MSBuild.exe
-      uses: warrenbuckley/Setup-MSBuild@v1
-
-    - name: Run MSBuild.exe
-      run: msbuild Game_Solution.sln
+      uses: microsoft/setup-msbuild@v1.0.0
+      with:
+        vs-version: "[16.4,16.6]"
+        
+    - name: Printing msbuild path
+      run: echo "${{ steps.setup_msbuild.outputs.msbuildPath }}"
+    
+    - name: Executing MSBuild
+      run: msbuild -version
