--- a/.github/workflows/Kujo-Studios CI.yml
+++ b/.github/workflows/Kujo-Studios CI.yml
@@ -22,9 +22,19 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@master
+      
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.0.0
+      with:
+        vs-version: "[16.4,16.6]"
+        
+    - name: echo msbuild path
+      run: echo "${{ steps.setup_msbuild.outputs.msbuildPath }}"
 
-    - name: Setup MSBuild.exe
-      uses: warrenbuckley/Setup-MSBuild@v1
-
-    - name: Run MSBuild.exe
+    - name: echo MSBuild
+      run: msbuild -version
+    
+    - name: Building the project on the host
       run: msbuild Game_Solution.sln
+
+      
