--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -114,7 +114,8 @@ copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Image\ext
 copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Image\external\Zlib\zlib1d.dll" "$(OutDir)"
 copy "$(SolutionDir)\bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\external\libogg\libogg.dll" "$(OutDir)"
 copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\external\libvorbis\libvorbis.dll" "$(OutDir)"
-copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\external\libvorbisfile\libvorbisfile-3.dll" "$(OutDir)"</Command>
+copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\external\libvorbisfile\libvorbisfile-3.dll" "$(OutDir)"
+Xcopy $(SolutionDir)Source\Resources $(SolutionDir)bin\Game\$(Configuration)\$(PlatformShortName)\Resources\ /s</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -171,7 +172,8 @@ copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Image\ext
 copy "$(SolutionDir)\bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\external\libogg\libogg.dll" "$(OutDir)"
 copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Image\external\libpng16.dll" "$(OutDir)"
 copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\external\libvorbis\libvorbis.dll" "$(OutDir)"
-copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\external\libvorbisfile\libvorbisfile-3.dll" "$(OutDir)"</Command>
+copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\external\libvorbisfile\libvorbisfile-3.dll" "$(OutDir)"
+Xcopy $(SolutionDir)Source\Resources $(SolutionDir)bin\Game\$(Configuration)\$(PlatformShortName)\Resources\ /s</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
