--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -216,6 +216,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
     <ClCompile Include="j1App.cpp" />
     <ClCompile Include="Deps\pugixml-1.10\src\pugixml.cpp" />
     <ClCompile Include="j1Audio.cpp" />
+    <ClCompile Include="j1Collisions.cpp" />
     <ClCompile Include="j1Fonts.cpp" />
     <ClCompile Include="j1Gui.cpp" />
     <ClCompile Include="j1Input.cpp" />
@@ -264,6 +265,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
     <ClInclude Include="EntityManager.h" />
     <ClInclude Include="j1App.h" />
     <ClInclude Include="j1Audio.h" />
+    <ClInclude Include="j1Collisions.h" />
     <ClInclude Include="j1Fonts.h" />
     <ClInclude Include="j1Gui.h" />
     <ClInclude Include="j1Input.h" />
