--- a/Source/Game.vcxproj.filters
+++ b/Source/Game.vcxproj.filters
@@ -59,6 +59,7 @@
     <ClCompile Include="j1LoseScene.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
+    <ClCompile Include="MovementManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1App.h" />
@@ -122,6 +123,7 @@
     <ClInclude Include="j1LoseScene.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="MovementManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Animation">
