ignoring save.xml

--- a/.gitignore
+++ b/.gitignore
@@ -361,6 +361,4 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
-
-#saved progres xml
-\Source\Resources\save.xml
+Source/Resources/save.xml
