Particles Smoke created

--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -211,6 +211,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
     <ClCompile Include="Ai.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Building.cpp" />
+    <ClCompile Include="DialogSystem.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="Fow.cpp" />
@@ -264,6 +265,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
     <ClInclude Include="Ai.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Building.h" />
+    <ClInclude Include="DialogSystem.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
     <ClInclude Include="Fow.h" />
