--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -215,30 +215,30 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="Fow.cpp" />
-    <ClCompile Include="j1App.cpp" />
+    <ClCompile Include="App.cpp" />
     <ClCompile Include="Deps\pugixml-1.10\src\pugixml.cpp" />
-    <ClCompile Include="j1Audio.cpp" />
-    <ClCompile Include="j1Collisions.cpp" />
-    <ClCompile Include="j1Fonts.cpp" />
-    <ClCompile Include="j1Gui.cpp" />
-    <ClCompile Include="j1Input.cpp" />
-    <ClCompile Include="j1LoseScene.cpp" />
-    <ClCompile Include="j1Map.cpp" />
-    <ClCompile Include="j1Minimap.cpp" />
-    <ClCompile Include="j1Particles.cpp" />
-    <ClCompile Include="j1Pathfinding.cpp" />
-    <ClCompile Include="j1PerfTimer.cpp" />
-    <ClCompile Include="j1Render.cpp" />
-    <ClCompile Include="j1Scene.cpp" />
-    <ClCompile Include="j1SceneLogo.cpp" />
-    <ClCompile Include="j1Textures.cpp" />
-    <ClCompile Include="j1Timer.cpp" />
-    <ClCompile Include="j1Window.cpp" />
-    <ClCompile Include="j1WinScene.cpp" />
+    <ClCompile Include="Audio.cpp" />
+    <ClCompile Include="Collisions.cpp" />
+    <ClCompile Include="Fonts.cpp" />
+    <ClCompile Include="Gui.cpp" />
+    <ClCompile Include="Input.cpp" />
+    <ClCompile Include="LoseScene.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Minimap.cpp" />
+    <ClCompile Include="Particles.cpp" />
+    <ClCompile Include="Pathfinding.cpp" />
+    <ClCompile Include="PerfTimer.cpp" />
+    <ClCompile Include="Render.cpp" />
+    <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="SceneLogo.cpp" />
+    <ClCompile Include="Textures.cpp" />
+    <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="Window.cpp" />
+    <ClCompile Include="WinScene.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="p2Log.cpp" />
-    <ClCompile Include="j1SceneTitle.cpp" />
-    <ClCompile Include="j1Transitions.cpp" />
+    <ClCompile Include="SceneTitle.cpp" />
+    <ClCompile Include="Transitions.cpp" />
     <ClCompile Include="Resources.cpp" />
     <ClCompile Include="SceneTutorial.cpp" />
   </ItemGroup>
@@ -270,31 +270,31 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
     <ClInclude Include="Fow.h" />
-    <ClInclude Include="j1App.h" />
-    <ClInclude Include="j1Audio.h" />
-    <ClInclude Include="j1Collisions.h" />
-    <ClInclude Include="j1Fonts.h" />
-    <ClInclude Include="j1Gui.h" />
-    <ClInclude Include="j1Input.h" />
-    <ClInclude Include="j1Map.h" />
-    <ClInclude Include="j1Minimap.h" />
-    <ClInclude Include="j1Module.h" />
-    <ClInclude Include="j1Particles.h" />
-    <ClInclude Include="j1Pathfinding.h" />
-    <ClInclude Include="j1PerfTimer.h" />
-    <ClInclude Include="j1Render.h" />
-    <ClInclude Include="j1Scene.h" />
-    <ClInclude Include="j1SceneLogo.h" />
-    <ClInclude Include="j1Textures.h" />
-    <ClInclude Include="j1Timer.h" />
-    <ClInclude Include="j1Window.h" />
-    <ClInclude Include="j1WinScene.h" />
-    <ClInclude Include="j1LoseScene.h" />
+    <ClInclude Include="App.h" />
+    <ClInclude Include="Audio.h" />
+    <ClInclude Include="Collisions.h" />
+    <ClInclude Include="Fonts.h" />
+    <ClInclude Include="Gui.h" />
+    <ClInclude Include="Input.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="Minimap.h" />
+    <ClInclude Include="Module.h" />
+    <ClInclude Include="Particles.h" />
+    <ClInclude Include="Pathfinding.h" />
+    <ClInclude Include="PerfTimer.h" />
+    <ClInclude Include="Render.h" />
+    <ClInclude Include="GameScene.h" />
+    <ClInclude Include="SceneLogo.h" />
+    <ClInclude Include="Textures.h" />
+    <ClInclude Include="Timer.h" />
+    <ClInclude Include="Window.h" />
+    <ClInclude Include="WinScene.h" />
+    <ClInclude Include="LoseScene.h" />
     <ClInclude Include="p2Defs.h" />
     <ClInclude Include="p2Log.h" />
     <ClInclude Include="p2Point.h" />
-    <ClInclude Include="j1SceneTitle.h" />
-    <ClInclude Include="j1Transitions.h" />
+    <ClInclude Include="SceneTitle.h" />
+    <ClInclude Include="Transitions.h" />
     <ClInclude Include="Resources.h" />
     <ClInclude Include="SceneTutorial.h" />
   </ItemGroup>
