--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -231,6 +231,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
     <ClCompile Include="QuestManager.cpp" />
     <ClCompile Include="Render.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="SceneIntro.cpp" />
     <ClCompile Include="SceneLogo.cpp" />
     <ClCompile Include="Textures.cpp" />
     <ClCompile Include="Timer.cpp" />
@@ -286,6 +287,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
     <ClInclude Include="QuestManager.h" />
     <ClInclude Include="Render.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="SceneIntro.h" />
     <ClInclude Include="SceneLogo.h" />
     <ClInclude Include="Textures.h" />
     <ClInclude Include="Timer.h" />
