--- a/Source/Game.vcxproj.filters
+++ b/Source/Game.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="QuestManager.cpp">
       <Filter>Quests</Filter>
     </ClCompile>
+    <ClCompile Include="SceneIntro.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -141,6 +144,9 @@
     <ClInclude Include="PathFinding.h" />
     <ClInclude Include="QuestManager.h">
       <Filter>Quests</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneIntro.h">
+      <Filter>Scenes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
